--- a/MainPage/Header-IndexPage.html
+++ b/MainPage/Header-IndexPage.html
@@ -12,7 +12,7 @@
                   <a class="nav-link active" aria-current="page" href="#" id="Customer-Page">Customer</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" id="Sales-Page">Sales</a>
+                  <a class="nav-link" href="#" id="Sales-Page">Saliendo</a>
                 </li>
                 <!--
                 <li class="nav-item">
