--- a/MainPage/JS-IndexPage.html
+++ b/MainPage/JS-IndexPage.html
@@ -4,9 +4,9 @@
     function navbarClicked(e){
         //console.log(e.target);
         if(e.target.matches(".nav-link")){
-        //console.log(e.target.id);
-        activeNavbar(e.target.id);
-        buscarContenido(e.target.id);
+            //console.log(e.target.id);
+            activeNavbar(e.target.id);
+            buscarContenido(e.target.id);
         }
     }
 
@@ -21,11 +21,12 @@
     }
 
     function buscarContenido(page){
+        console.log(page);
         google.script.run
-        .withSuccessHandler(contenidoHTML =>{
-            document.getElementById("main-content").innerHTML = contenidoHTML;
-        })
-        .obtenerContenidoHTML(page);
+            .withSuccessHandler(contenidoHTML =>{
+                document.getElementById("main-content").innerHTML = contenidoHTML;
+            })
+            .obtenerContenidoHTML(page);
     }
     //------------------------------------------------------------ END NAVTAB --- START ADD NEW CLIENT
 </script>
