Url navBar solucionado

--- a/MainPage/CSS-IndexPage.html
+++ b/MainPage/CSS-IndexPage.html
@@ -56,4 +56,11 @@
     display: flex;
     align-items: center;
   }
+
+  .button-edit{
+        color:#86A3C2;
+    }
+    .button-delete{
+        color: #E38080;
+    }
 </style>
