--- a/MainPage/Header-IndexPage.html
+++ b/MainPage/Header-IndexPage.html
@@ -9,10 +9,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#" id="Customer-Page">Customer</a>
+                  <a class="nav-link active" aria-current="page" href='?temp=MainPage/CustomerInfo/Customer-Page' id="Customer-Page" >Customer</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" id="Sales-Page">Saliendo</a>
+                  <a class="nav-link" aria-current="page" href='?temp=MainPage/SalesInput/SalesInput-Page' id="SalesInput-Page">Sales</a>
                 </li>
                 <!--
                 <li class="nav-item">
